--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   lottie: ^2.6.0
   http: ^0.13.3
+  go_router: ^14.8.1
+  provider: ^6.1.4
+  shared_preferences: ^2.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
