--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   lottie: ^2.6.0
-  http: ^0.13.3
+  http: ^1.3.0
   go_router: ^14.8.1
   provider: ^6.1.4
   shared_preferences: ^2.5.3
   flutter_dotenv: ^5.2.1
+  google_fonts: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
