--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_dotenv: ^5.2.1
   google_fonts: ^6.0.0
+  flutter_otp_text_field: ^1.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
