--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   google_fonts: ^6.0.0
   flutter_otp_text_field: ^1.5.0
+  table_calendar: ^3.2.0
+  intl: ^0.20.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
