--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_otp_text_field: ^1.5.0
   table_calendar: ^3.2.0
   intl: ^0.20.2
+  jwt_decoder: ^2.0.1
+  flutter_secure_storage: ^9.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
