--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
   assets:
   - .env
   - assets/images/
+  - assets/images/avatars/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
