--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
   lottie: ^2.6.0
-  http: ^1.3.0
   go_router: ^14.8.1
   provider: ^6.1.4
   shared_preferences: ^2.5.3
@@ -42,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   jwt_decoder: ^2.0.1
   flutter_secure_storage: ^9.2.4
+  dio: ^5.8.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
