--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   - .env
   - assets/images/
   - assets/images/avatars/
+  - assets/images/backgrounds/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
