--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_secure_storage: ^9.2.4
   dio: ^5.8.0+1
+  skeletonizer: ^1.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
