--- a/thesis_frontend/pubspec.yaml
+++ b/thesis_frontend/pubspec.yaml
@@ -85,7 +85,7 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icons/icon.png"
+  image_path: "assets/images/icons/icon.png"
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
